--- a/index.html
+++ b/index.html
@@ -11,37 +11,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/hamburgers.min.css">
     <!-- Custom CSS Link  -->
     <link rel="stylesheet" href="./css/globalStyle.css">
     <link rel="stylesheet" href="./css/nav&footer.css">
     <link rel="stylesheet" href="./css/home.css">
 </head>
-
 <body>
 
     <!-- -----------NavBar Start---------- -->
     <!-- Custom classes: 1.navBar 2.navLinks -->
-    <div class="container-fluid navBar pt-1">
+    <div class="container-fluid navBar">
         <div class="row ncc-navBar">
-            <div class="col-1 ps-4 pt-3">
-                <img src="./images/NCC Logo.png" alt="NCC Logo" height="90px" />
+            <div class="col-1 ps-4 pt-3 NCC-Logo">
+                <img src="./images/NCC Logo.png" alt="NCC Logo"/>
             </div>
-            <div class="col-10 pt-3">
+            <div class="col-10 pt-3 navItem" id="ncc-heading">
                 <p class="heading-ncc">नेशनल कैडेट कोर</p>
                 <p class="heading-ncc">National Cadet Corps, IIT Roorkee</p>
             </div>
-            <div class="col-1 pe-5 pt-3">
-                <img src="./images/IITR Logo.png" alt="IITR logo" width="80px" />
+            <div class="col-1 pt-3 IITR-Logo">
+                <img src="./images/IITR Logo.png" alt="IITR logo" />
+            </div>
+            <div class="toggle-icon col-1 offset-8 d-none navItem">
+                  <button class="hamburger hamburger--collapse" type="button">
+                    <span class="hamburger-box ">
+                      <span class="hamburger-inner"></span>
+                    </span>
+                  </button>
             </div>
         </div>
-        <nav class="navbar  navbar-row navbar-expand-lg navbar-dark navLinks py-0">
+        </div>
+        <nav class="navbar  navbar-row navbar-expand-lg navbar-dark navLinks py-0 box">
             <div class="container">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="navbar-collapse">
                     <ul class="navbar-nav d-flex justify-content-between w-100 me-auto mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
@@ -65,7 +68,6 @@
                 </div>
             </div>
         </nav>
-    </div>
     <!-- -----------NavBar End---------- -->
 
     <!---------- carousel start------- -->
@@ -104,7 +106,7 @@
     </div>
     <!---------- carousel end------- -->
     <!-- Aim part-->
-    <div class="Our_AIM">
+    <!-- <div class="Our_AIM">
         <div class="aim">
             <p
                 style="padding-top: 23px; text-align:center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;font-weight:600; font-size: 35px;line-height: 31px; color: #fff;">
@@ -133,10 +135,10 @@
                 style="padding-top: 10px;text-align: center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;font-weight:600; font-size: 36px;color: #fff;">
                 Pledge</em></p>
         </div>
-    </div>
+    </div> -->
 
     <!--Pledge part-->
-    <div class="Pledge">
+    <!-- <div class="Pledge">
 
         <div class="flex-container">
             <div>
@@ -148,14 +150,14 @@
                     positive community service in the spirit of selflessness and concern for our fellow beings.</p>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Footer Starts -->
-    <div class="ncc-bg-blue ncc-white">
-        <div class="row mx-0 ">
+    <!-- <div class="ncc-bg-blue ncc-white">
+        <div class="row mx-0 "> -->
 
             <!-- Normal Footer -->
 
-            <div class="py-2 d-flex justify-content-between footerResponsive text-left">
+            <!-- <div class="py-2 d-flex justify-content-between footerResponsive text-left">
                 <div class="d-flex flex-column text-left  px-2 element px-lg-4">
                     <span id="title_footer" class="pb-1">
                         Contact Us:
@@ -217,11 +219,11 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Mobile Footer -->
 
-            <div class="py-2 d-flex flex-column footerResponsive1 text-left">
+            <!-- <div class="py-2 d-flex flex-column footerResponsive1 text-left">
                 <div id="footer_heading" class="d-flex flex-column text-left px-4 element">
                     <h2>National Cadet Corps</h2>
                     <h4>IIT Roorkee</h4>
@@ -303,7 +305,7 @@
     <p class="d-flex align-items-center text-center justify-content-center ncc-bg-copyright footer-copyright ncc-16 ncc-white py-2"
         id="content">©
         Copyright 2021 - NCC IIT Roorkee | All Right Reserved
-    </p>
+    </p> -->
 
     <!-- Footer Ends -->
 
@@ -315,7 +317,18 @@
             else {
                 document.getElementById(id).style.display = "block"
             }
-        }
+        };
+        
+
+        const toggle = document.querySelector(".toggle-icon");
+        const box = document.querySelector(".box");
+        const trigg = document.querySelector(".hamburger");
+        toggle.onclick = (e) => {
+        trigg.classList.toggle("is-active");
+        box.classList.toggle("collapsed");
+        };
+
+
     </script>
 
     
