--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <!-- Custom classes: 1.navBar 2.navLinks -->
     <div class="container-fluid navBar">
         <div class="row ncc-navBar">
-            <div class="col-1 ps-4 pt-3 NCC-Logo">
+            <div class="col-1 NCC-Logo">
                 <img src="./images/NCC Logo.png" alt="NCC Logo"/>
             </div>
             <div class="col-10 pt-3 navItem" id="ncc-heading">
                 <p class="heading-ncc">नेशनल कैडेट कोर</p>
                 <p class="heading-ncc">National Cadet Corps, IIT Roorkee</p>
             </div>
-            <div class="col-1 pt-3 IITR-Logo">
+            <div class="col-1 IITR-Logo">
                 <img src="./images/IITR Logo.png" alt="IITR logo" />
             </div>
             <div class="toggle-icon col-1 offset-8 d-none navItem">
