--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <!-- ----hamburgers.min.css--- -->
     <link rel="stylesheet" href="./css/hamburgers.min.css">
     <!-- Custom CSS Link  -->
     <link rel="stylesheet" href="./css/globalStyle.css">
@@ -20,7 +21,6 @@
 <body>
 
     <!-- -----------NavBar Start---------- -->
-    <!-- Custom classes: 1.navBar 2.navLinks -->
     <div class="container-fluid navBar">
         <div class="row ncc-navBar">
             <div class="col-1 NCC-Logo">
@@ -42,7 +42,7 @@
             </div>
         </div>
         </div>
-        <nav class="navbar  navbar-row navbar-expand-lg navbar-dark navLinks py-0 box">
+        <nav class="navbar navbar-expand-lg navbar-dark navLinks py-0 box">
             <div class="container">
                 <div class="navbar-collapse">
                     <ul class="navbar-nav d-flex justify-content-between w-100 me-auto mb-lg-0">
@@ -71,8 +71,6 @@
     <!-- -----------NavBar End---------- -->
 
     <!---------- carousel start------- -->
-    <!-- only bootstrap no custom class -->
-
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-pause="hover">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -106,7 +104,7 @@
     </div>
     <!---------- carousel end------- -->
     <!-- Aim part-->
-    <!-- <div class="Our_AIM">
+    <div class="Our_AIM">
         <div class="aim">
             <p
                 style="padding-top: 23px; text-align:center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;font-weight:600; font-size: 35px;line-height: 31px; color: #fff;">
@@ -135,10 +133,10 @@
                 style="padding-top: 10px;text-align: center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;font-weight:600; font-size: 36px;color: #fff;">
                 Pledge</em></p>
         </div>
-    </div> -->
+    </div>
 
     <!--Pledge part-->
-    <!-- <div class="Pledge">
+    <div class="Pledge">
 
         <div class="flex-container">
             <div>
@@ -150,14 +148,14 @@
                     positive community service in the spirit of selflessness and concern for our fellow beings.</p>
             </div>
         </div>
-    </div> -->
+    </div>
     <!-- Footer Starts -->
-    <!-- <div class="ncc-bg-blue ncc-white">
-        <div class="row mx-0 "> -->
+    <div class="ncc-bg-blue ncc-white">
+        <div class="row mx-0 ">
 
             <!-- Normal Footer -->
 
-            <!-- <div class="py-2 d-flex justify-content-between footerResponsive text-left">
+            <div class="py-2 d-flex justify-content-between footerResponsive text-left">
                 <div class="d-flex flex-column text-left  px-2 element px-lg-4">
                     <span id="title_footer" class="pb-1">
                         Contact Us:
@@ -219,11 +217,11 @@
                         </p>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Mobile Footer -->
 
-            <!-- <div class="py-2 d-flex flex-column footerResponsive1 text-left">
+            <div class="py-2 d-flex flex-column footerResponsive1 text-left">
                 <div id="footer_heading" class="d-flex flex-column text-left px-4 element">
                     <h2>National Cadet Corps</h2>
                     <h4>IIT Roorkee</h4>
@@ -305,7 +303,7 @@
     <p class="d-flex align-items-center text-center justify-content-center ncc-bg-copyright footer-copyright ncc-16 ncc-white py-2"
         id="content">©
         Copyright 2021 - NCC IIT Roorkee | All Right Reserved
-    </p> -->
+    </p>
 
     <!-- Footer Ends -->
 
