--- a/about.html
+++ b/about.html
@@ -79,24 +79,24 @@
             <div class="line"></div>
         </div>
         <div class="container-fluid">
-            <ul class="nav nav-tabs mb-3 nav-fill" id="pills-tab-1 role="tablist">
+            <ul class="nav nav-tabs mb-3 justify-content-evenly" id="pills-tab-1 role="tablist">
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link active" id="pills-ADMINISTRATION-tab" data-bs-toggle="pill" data-bs-target="#pills-ADMINISTRATION" type="button" role="tab" aria-controls="pills-ADMINISTRATION" aria-selected="true">ADMINISTRATION</button>
+                  <button class="nav-link active" id="pills-ADMINISTRATION-tab" onclick="team(this.id)" data-bs-toggle="pill" data-bs-target="#pills-ADMINISTRATION" type="button" role="tab" aria-controls="pills-ADMINISTRATION" aria-selected="true">ADMINISTRATION</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="pills-DESIGN-tab" data-bs-toggle="pill" data-bs-target="#pills-DESIGN" type="button" role="tab" aria-controls="pills-DESIGN" aria-selected="false">DESIGN</button>
+                  <button class="nav-link" id="pills-DESIGN-tab" onclick="team(this.id)"  data-bs-toggle="pill" data-bs-target="#pills-DESIGN" type="button" role="tab" aria-controls="pills-DESIGN" aria-selected="false">DESIGN</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="pills-WEB-tab" data-bs-toggle="pill" data-bs-target="#pills-WEB" type="button" role="tab" aria-controls="pills-WEB" aria-selected="false">WEB D</button>
+                  <button class="nav-link" id="pills-WEB-tab" onclick="team(this.id)"  data-bs-toggle="pill" data-bs-target="#pills-WEB" type="button" role="tab" aria-controls="pills-WEB" aria-selected="false">WEB D</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="pills-EDITORIAL-tab" data-bs-toggle="pill" data-bs-target="#pills-EDITORIAL" type="button" role="tab" aria-controls="pills-EDITORIAL" aria-selected="false">EDITORIAL</button>
+                  <button class="nav-link" id="pills-EDITORIAL-tab" onclick="team(this.id)"  data-bs-toggle="pill" data-bs-target="#pills-EDITORIAL" type="button" role="tab" aria-controls="pills-EDITORIAL" aria-selected="false">EDITORIAL</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="pills-EVENTS-tab" data-bs-toggle="pill" data-bs-target="#pills-EVENTS" type="button" role="tab" aria-controls="pills-EVENTS" aria-selected="false">EVENTS</button>
+                  <button class="nav-link" id="pills-EVENTS-tab" onclick="team(this.id)"  data-bs-toggle="pill" data-bs-target="#pills-EVENTS" type="button" role="tab" aria-controls="pills-EVENTS" aria-selected="false">EVENTS</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="pills-TRAINING-tab" data-bs-toggle="pill" data-bs-target="#pills-TRAINING" type="button" role="tab" aria-controls="pills-TRAINING" aria-selected="false">TRAINING</button>
+                  <button class="nav-link" id="pills-TRAINING-tab" onclick="team(this.id)"  data-bs-toggle="pill" data-bs-target="#pills-TRAINING" type="button" role="tab" aria-controls="pills-TRAINING" aria-selected="false">TRAINING</button>
                 </li>
               </ul>
               <div class="tab-content" id="pills-tabContent">
@@ -116,7 +116,7 @@
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
                       </div>
                     </div>
-                    <div class="section-2 d-flex justify-content-between">
+                    <div class="section-2 d-flex justify-content-evenly">
                       <div class="item">
                         <p class="name">PRATHAMESH BHAKTAN</p>
                         <i class="fas fa-user-tie"></i>
@@ -148,7 +148,7 @@
                   <div class="container">
                     <div class="section-1 d-flex justify-content-evenly">
                       <div class="item">
-                        <p class="name">PRATHAMESH BHAKTAN</p>
+                        <p class="name">PRATHAMESH BHAKTAN DESIGN</p>
                         <i class="fas fa-user-tie"></i>
                         <span class="designation">SECRETARY</span>
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
@@ -160,7 +160,7 @@
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
                       </div>
                     </div>
-                    <div class="section-2 d-flex justify-content-between">
+                    <div class="section-2 d-flex justify-content-evenly">
                       <div class="item">
                         <p class="name">PRATHAMESH BHAKTAN</p>
                         <i class="fas fa-user-tie"></i>
@@ -192,7 +192,7 @@
                   <div class="container">
                     <div class="section-1 d-flex justify-content-evenly">
                       <div class="item">
-                        <p class="name">PRATHAMESH BHAKTAN</p>
+                        <p class="name">PRATHAMESH BHAKTAN WEB</p>
                         <i class="fas fa-user-tie"></i>
                         <span class="designation">SECRETARY</span>
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
@@ -204,7 +204,7 @@
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
                       </div>
                     </div>
-                    <div class="section-2 d-flex justify-content-between">
+                    <div class="section-2 d-flex justify-content-evenly">
                       <div class="item">
                         <p class="name">PRATHAMESH BHAKTAN</p>
                         <i class="fas fa-user-tie"></i>
@@ -236,7 +236,7 @@
                   <div class="container">
                     <div class="section-1 d-flex justify-content-evenly">
                       <div class="item">
-                        <p class="name">PRATHAMESH BHAKTAN</p>
+                        <p class="name">PRATHAMESH BHAKTAN EDITORIAL</p>
                         <i class="fas fa-user-tie"></i>
                         <span class="designation">SECRETARY</span>
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
@@ -248,7 +248,7 @@
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
                       </div>
                     </div>
-                    <div class="section-2 d-flex justify-content-between">
+                    <div class="section-2 d-flex justify-content-evenly">
                       <div class="item">
                         <p class="name">PRATHAMESH BHAKTAN</p>
                         <i class="fas fa-user-tie"></i>
@@ -280,7 +280,7 @@
                   <div class="container">
                     <div class="section-1 d-flex justify-content-evenly">
                       <div class="item">
-                        <p class="name">PRATHAMESH BHAKTAN</p>
+                        <p class="name">PRATHAMESH BHAKTAN EVENTS</p>
                         <i class="fas fa-user-tie"></i>
                         <span class="designation">SECRETARY</span>
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
@@ -292,7 +292,7 @@
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
                       </div>
                     </div>
-                    <div class="section-2 d-flex justify-content-between">
+                    <div class="section-2 d-flex justify-content-evenly">
                       <div class="item">
                         <p class="name">PRATHAMESH BHAKTAN</p>
                         <i class="fas fa-user-tie"></i>
@@ -324,7 +324,7 @@
                   <div class="container">
                     <div class="section-1 d-flex justify-content-evenly">
                       <div class="item">
-                        <p class="name">PRATHAMESH BHAKTAN</p>
+                        <p class="name">PRATHAMESH BHAKTAN TRAINING</p>
                         <i class="fas fa-user-tie"></i>
                         <span class="designation">SECRETARY</span>
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
@@ -336,7 +336,7 @@
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
                       </div>
                     </div>
-                    <div class="section-2 d-flex justify-content-between">
+                    <div class="section-2 d-flex justify-content-evenly">
                       <div class="item">
                         <p class="name">PRATHAMESH BHAKTAN</p>
                         <i class="fas fa-user-tie"></i>
@@ -378,15 +378,15 @@
             <div class="line"></div>
         </div>
         <div class="container-fluid">
-            <ul class="nav nav-tabs mb-3 nav-fill" id="pills-tab-2" role="tablist">
+            <ul class="nav nav-tabs mb-3 justify-content-evenly" id="pills-tab-2" role="tablist">
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link active" id="pills-2020-2021-tab" data-bs-toggle="pill" data-bs-target="#pills-2020-2021" type="button" role="tab" aria-controls="pills-2020-2021" aria-selected="true">2020-2021</button>
+                  <button class="nav-link active" id="pills-2020-2021-tab" onclick="team(this.id)"  data-bs-toggle="pill" data-bs-target="#pills-2020-2021" type="button" role="tab" aria-controls="pills-2020-2021" aria-selected="true">2020-2021</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="pills-2019-2020-tab" data-bs-toggle="pill" data-bs-target="#pills-2019-2020" type="button" role="tab" aria-controls="pills-2019-2020" aria-selected="false">2019-2020</button>
+                  <button class="nav-link" id="pills-2019-2020-tab" onclick="team(this.id)"  data-bs-toggle="pill" data-bs-target="#pills-2019-2020" type="button" role="tab" aria-controls="pills-2019-2020" aria-selected="false">2019-2020</button>
                 </li>
                 <li class="nav-item" role="presentation">
-                  <button class="nav-link" id="pills-2018-2019-tab" data-bs-toggle="pill" data-bs-target="#pills-2018-2019" type="button" role="tab" aria-controls="pills-2018-2019" aria-selected="false">2018-2019</button>
+                  <button class="nav-link" id="pills-2018-2019-tab" onclick="team(this.id)"  data-bs-toggle="pill" data-bs-target="#pills-2018-2019" type="button" role="tab" aria-controls="pills-2018-2019" aria-selected="false">2018-2019</button>
                 </li>
               </ul>
               <div class="tab-content" id="pills-tabContent">
@@ -394,7 +394,7 @@
                   <div class="container">
                     <div class="section-1 d-flex justify-content-evenly">
                       <div class="item">
-                        <p class="name">PRATHAMESH BHAKTAN</p>
+                        <p class="name">PRATHAMESH BHAKTAN 2020</p>
                         <i class="fas fa-user-tie"></i>
                         <span class="designation">SECRETARY</span>
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
@@ -406,7 +406,7 @@
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
                       </div>
                     </div>
-                    <div class="section-2 d-flex justify-content-between">
+                    <div class="section-2 d-flex justify-content-evenly">
                       <div class="item">
                         <p class="name">PRATHAMESH BHAKTAN</p>
                         <i class="fas fa-user-tie"></i>
@@ -438,7 +438,7 @@
                   <div class="container">
                     <div class="section-1 d-flex justify-content-evenly">
                       <div class="item">
-                        <p class="name">PRATHAMESH BHAKTAN</p>
+                        <p class="name">PRATHAMESH BHAKTAN 2019</p>
                         <i class="fas fa-user-tie"></i>
                         <span class="designation">SECRETARY</span>
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
@@ -450,7 +450,7 @@
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
                       </div>
                     </div>
-                    <div class="section-2 d-flex justify-content-between">
+                    <div class="section-2 d-flex justify-content-evenly">
                       <div class="item">
                         <p class="name">PRATHAMESH BHAKTAN</p>
                         <i class="fas fa-user-tie"></i>
@@ -482,7 +482,7 @@
                   <div class="container">
                     <div class="section-1 d-flex justify-content-evenly">
                       <div class="item">
-                        <p class="name">PRATHAMESH BHAKTAN</p>
+                        <p class="name">PRATHAMESH BHAKTAN 2018</p>
                         <i class="fas fa-user-tie"></i>
                         <span class="designation">SECRETARY</span>
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
@@ -494,7 +494,7 @@
                         <p class="contact">prathamesh_n@me.iitr.ac.in</p>
                       </div>
                     </div>
-                    <div class="section-2 d-flex justify-content-between">
+                    <div class="section-2 d-flex justify-content-evenly">
                       <div class="item">
                         <p class="name">PRATHAMESH BHAKTAN</p>
                         <i class="fas fa-user-tie"></i>
@@ -686,6 +686,7 @@
   <!-- Footer Ends -->
 
   <script>
+
       const footer = (id) => {
           if (document.getElementById(id).style.display == "block") {
               document.getElementById(id).style.display = "none"
@@ -706,7 +707,7 @@
 
 
   </script>
-
+  <script src="./about.js" ></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
   crossorigin="anonymous"></script>
