--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./about.html">About</a>
+                            <a class="nav-link" href="./aboutUs.html">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Events</a>
