--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Custom CSS Link  -->
     <link rel="stylesheet" href="./css/globalStyle.css">
     <link rel="stylesheet" href="./css/nav&footer.css">
-    <link rel="stylesheet" href="./css/home.css">
+    <!-- <link rel="stylesheet" href="./css/home.css"> -->
 </head>
 <body>
 
@@ -45,7 +45,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark navLinks py-0 box">
             <div class="container">
                 <div class="navbar-collapse">
-                    <ul class="navbar-nav d-flex justify-content-between w-100 me-auto mb-lg-0">
+                    <ul class="navbar-nav d-flex justify-content-between w-100 me-auto mb-lg-0" id="a">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                         </li>
@@ -71,7 +71,7 @@
     <!-- -----------NavBar End---------- -->
 
     <!---------- carousel start------- -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-pause="hover">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -82,13 +82,13 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./images/carousel.png" class="d-block w-100" alt="image-1">
+                <img src="./images/carousel-copy.jpg" class="d-block w-100" alt="image-1">
             </div>
             <div class="carousel-item">
-                <img src="./images/carousel.png" class="d-block w-100" alt="image-2">
+                <img src="./images/carousel-copy.jpg" class="d-block w-100" alt="image-2">
             </div>
             <div class="carousel-item">
-                <img src="./images/carousel.png" class="d-block w-100" alt="image-3">
+                <img src="./images/carousel-copy.jpg" class="d-block w-100" alt="image-3">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -104,7 +104,7 @@
     </div>
     <!---------- carousel end------- -->
     <!-- Aim part-->
-    <div class="Our_AIM">
+    <!-- <div class="Our_AIM">
         <div class="aim">
             <p
                 style="padding-top: 23px; text-align:center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;font-weight:600; font-size: 35px;line-height: 31px; color: #fff;">
@@ -133,10 +133,10 @@
                 style="padding-top: 10px;text-align: center; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;font-weight:600; font-size: 36px;color: #fff;">
                 Pledge</em></p>
         </div>
-    </div>
+    </div> -->
 
     <!--Pledge part-->
-    <div class="Pledge">
+    <!-- <div class="Pledge">
 
         <div class="flex-container">
             <div>
@@ -148,7 +148,7 @@
                     positive community service in the spirit of selflessness and concern for our fellow beings.</p>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Footer Starts -->
     <div class="ncc-bg-blue ncc-white">
         <div class="row mx-0 ">
