--- a/index.html
+++ b/index.html
@@ -42,32 +42,34 @@
             </div>
         </div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-dark navLinks py-0 box">
-            <div class="container">
-                <div class="navbar-collapse">
-                    <ul class="navbar-nav d-flex justify-content-between w-100 me-auto mb-lg-0" id="a">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./aboutUs.html">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Events</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./allBlog.html">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./FAQs.html">FAQs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Annual Report</a>
-                        </li>
-                    </ul>
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-dark navLinks py-0 box">
+                <div class="container">
+                    <div class="navbar-collapse">
+                        <ul class="navbar-nav d-flex justify-content-between w-100 me-auto mb-lg-0" id="a">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./aboutUs.html">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Events</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./allBlog.html">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./FAQs.html">FAQs</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Annual Report</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </div>
     <!-- -----------NavBar End---------- -->
 
     <!---------- carousel start------- -->
