--- a/aboutUs.html
+++ b/aboutUs.html
@@ -785,22 +785,22 @@
       <div class="container-fluid">
         <ul class="nav nav-tabs mb-3 justify-content-evenly" id="pills-tab-2" role="tablist">
           <li class="nav-item" role="presentation">
-            <button class="nav-link active" id="pills-2020-2021-tab" onclick="team(this.id)" data-bs-toggle="pill"
+            <button class="nav-link active" id="pills-2020-2021-tab" onclick="alum(this.id)" data-bs-toggle="pill"
               data-bs-target="#pills-2020-2021" type="button" role="tab" aria-controls="pills-2020-2021"
               aria-selected="true">2020-2021</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link" id="pills-2019-2020-tab" onclick="team(this.id)" data-bs-toggle="pill"
+            <button class="nav-link" id="pills-2019-2020-tab" onclick="alum(this.id)" data-bs-toggle="pill"
               data-bs-target="#pills-2019-2020" type="button" role="tab" aria-controls="pills-2019-2020"
               aria-selected="false">2019-2020</button>
           </li>
           <li class="nav-item" role="presentation">
-            <button class="nav-link" id="pills-2018-2019-tab" onclick="team(this.id)" data-bs-toggle="pill"
+            <button class="nav-link" id="pills-2018-2019-tab" onclick="alum(this.id)" data-bs-toggle="pill"
               data-bs-target="#pills-2018-2019" type="button" role="tab" aria-controls="pills-2018-2019"
               aria-selected="false">2018-2019</button>
           </li>
         </ul>
-        <div class="tab-content" id="pills-tabContent">
+        <div class="tab-content tab-content-alum" id="pills-tabContent">
           <div class="tab-pane fade show active" id="pills-2020-2021" role="tabpanel"
             aria-labelledby="pills-2020-2021-tab">
             <div class="container">
