--- a/FAQs.html
+++ b/FAQs.html
@@ -47,14 +47,7 @@
       <div class="container">
         <div class="navbar-collapse">
           <ul
-            class="
-              navbar-nav
-              d-flex
-              justify-content-between
-              w-100
-              me-auto
-              mb-lg-0
-            "
+            class="navbar-nav d-flex justify-content-between w-100 me-auto mb-lg-0"
           >
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="./index.html"
@@ -84,7 +77,7 @@
     <!-- -----------NavBar End---------- -->
     <!-- -----------Accordion Start---------- -->
     <div class="container mb-5">
-      <p class="m-5 heading">Frequently Asked Questions</p>
+      <p class="heading">Frequently Asked Questions</p>
       <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="heading1">
