--- a/aboutUs.html
+++ b/aboutUs.html
@@ -77,7 +77,7 @@
   <!-- UNITY AND DISCIPLINE -->
   <div class="container">
     <h2 class="about-heading">UNITY AND DISCIPLINE | एकता और अनुशासन</h2>
-    <h2 class="about-heading aboutheading2">Unity and Disciple</h2>
+    <h2 class="about-heading aboutheading2">Unity and Discipline</h2>
     <!-- NCC Images -->
     <div class="about-images d-flex justify-content-evenly my-4">
       <img src="./images/aboutNCC.png">
