--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p class="heading-ncc">National Cadet Corps, IIT Roorkee</p>
       </div>
       <div class="col-1 IITR-Logo">
-        <a href="https://new.iitr.ac.in/Main/pages/_en_Indian_Institute_of_Technology_Roorkee__en_.html"><img src="./images/IITR Logo.png" alt="IITR logo" /></a>
+        <a href="https://new.iitr.ac.in/"><img src="./images/IITR Logo.png" alt="IITR logo" /></a>
       </div>
       <div class="toggle-icon col-1 offset-8 d-none navItem">
         <button class="hamburger hamburger--collapse" type="button">
